--- a/style.css
+++ b/style.css
@@ -33,8 +33,21 @@ nav {
   nav ul li {
     display: inline;
     margin: 0 5px; }
+    nav ul li:hover {
+      cursor: pointer; }
     nav ul li a {
       color: black;
       text-decoration: none; }
+  @media (max-width: 603px) {
+    nav ul li {
+      display: block; } }
+
+.button {
+  padding: 0px 30px;
+  color: white;
+  background-color: #f9e42f;
+  margin: 5px;
+  border-radius: 5%;
+  display: inline-block; }
 
 /*# sourceMappingURL=style.css.map */
