--- a/style.scss
+++ b/style.scss
@@ -39,10 +39,28 @@ nav {
     li {
       display: inline;
       margin: 0 5px;
+      &:hover {
+        cursor: pointer;
+      }
       a {
         color: black;
         text-decoration: none;
       }
-    }
+    } //closes li
+  } //closes ul
+  @media (max-width: 603px) {
+    ul {
+      li {
+        display: block;
+      } //closes li
+    } //closes ul
   }
+} //closes nav
+.button {
+  padding: 0px 30px;
+  color: white;
+  background-color: #f9e42f;
+  margin: 5px;
+  border-radius: 5%;
+  display: inline-block;
 }
