--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 section {
   padding: 10px 20px;
-  height: 500px;
+  min-height: 500px;
   border-top: 1px solid #c8c8c8; }
 
 #about {
@@ -39,8 +39,10 @@ nav {
       color: black;
       text-decoration: none; }
   @media (max-width: 603px) {
-    nav ul li {
-      display: block; } }
+    nav {
+      display: none; }
+      nav ul li {
+        display: block; } }
 
 .button {
   padding: 0px 30px;
@@ -49,5 +51,18 @@ nav {
   margin: 5px;
   border-radius: 5%;
   display: inline-block; }
+
+.burger-menu.fa.fa-bars {
+  display: none;
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 30px;
+  display: none; }
+  @media (max-width: 603px) {
+    .burger-menu.fa.fa-bars {
+      display: block; } }
 
 /*# sourceMappingURL=style.css.map */
